--- a/Alibaba/Base.lproj/Main.storyboard
+++ b/Alibaba/Base.lproj/Main.storyboard
@@ -3,7 +3,6 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
-        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
     </dependencies>
     <scenes>
         <!--Navigation Controller-->
@@ -81,50 +80,34 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="bg001" translatesAutoresizingMaskIntoConstraints="NO" id="W71-FT-XqN">
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="bg001" translatesAutoresizingMaskIntoConstraints="NO" id="W71-FT-XqN">
                                 <rect key="frame" x="20" y="166" width="335" height="335"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" secondItem="W71-FT-XqN" secondAttribute="height" multiplier="1:1" id="FNq-Jr-eaF"/>
-                                </constraints>
-                            </imageView>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="font_bond" translatesAutoresizingMaskIntoConstraints="NO" id="vUQ-uH-5aU">
-                                <rect key="frame" x="67" y="20" width="240" height="39"/>
                             </imageView>
                             <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="CKG-uN-5mc">
                                 <rect key="frame" x="0.0" y="73" width="375" height="13"/>
                                 <color key="backgroundColor" red="0.92549020049999997" green="0.94117647410000005" blue="0.94509804249999996" alpha="1" colorSpace="calibratedRGB"/>
                             </view>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="eOi-tq-vLl">
+                            <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="eOi-tq-vLl">
                                 <rect key="frame" x="0.0" y="146" width="375" height="375"/>
                                 <subviews>
-                                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="logo002" translatesAutoresizingMaskIntoConstraints="NO" id="vW7-X4-OO5">
+                                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="logo002" translatesAutoresizingMaskIntoConstraints="NO" id="vW7-X4-OO5">
                                         <rect key="frame" x="24" y="24" width="327" height="327"/>
-                                        <constraints>
-                                            <constraint firstAttribute="width" secondItem="vW7-X4-OO5" secondAttribute="height" multiplier="1:1" id="QcN-Mf-xf8"/>
-                                        </constraints>
                                     </imageView>
                                 </subviews>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
-                                <constraints>
-                                    <constraint firstAttribute="trailing" secondItem="vW7-X4-OO5" secondAttribute="trailing" constant="24" id="dhu-3R-74y"/>
-                                    <constraint firstItem="vW7-X4-OO5" firstAttribute="centerY" secondItem="eOi-tq-vLl" secondAttribute="centerY" id="hrI-rA-8Cb"/>
-                                    <constraint firstItem="vW7-X4-OO5" firstAttribute="leading" secondItem="eOi-tq-vLl" secondAttribute="leading" constant="24" id="jc2-2q-wmH"/>
-                                    <constraint firstAttribute="width" secondItem="eOi-tq-vLl" secondAttribute="height" multiplier="1:1" id="lGi-wA-qFi"/>
-                                </constraints>
+                            </view>
+                            <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Uc6-yy-lSj">
+                                <rect key="frame" x="0.0" y="78" width="375" height="13"/>
+                                <color key="backgroundColor" red="0.92549020049999997" green="0.94117647410000005" blue="0.94509804249999996" alpha="1" colorSpace="calibratedRGB"/>
                             </view>
                             <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="bg_rader" translatesAutoresizingMaskIntoConstraints="NO" id="Qmy-gb-zfq">
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="698"/>
                             </imageView>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="font_bond" translatesAutoresizingMaskIntoConstraints="NO" id="ooP-jI-e5I">
+                                <rect key="frame" x="67" y="20" width="240" height="39"/>
+                            </imageView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                        <constraints>
-                            <constraint firstItem="eOi-tq-vLl" firstAttribute="centerY" secondItem="N4e-gh-4Lw" secondAttribute="centerY" id="4TG-qg-cjR"/>
-                            <constraint firstItem="W71-FT-XqN" firstAttribute="centerY" secondItem="N4e-gh-4Lw" secondAttribute="centerY" id="JQ4-5X-O6a"/>
-                            <constraint firstItem="eOi-tq-vLl" firstAttribute="leading" secondItem="N4e-gh-4Lw" secondAttribute="leading" id="cGV-1s-3bv"/>
-                            <constraint firstAttribute="trailing" secondItem="W71-FT-XqN" secondAttribute="trailing" constant="20" id="ko7-Aa-FxU"/>
-                            <constraint firstItem="W71-FT-XqN" firstAttribute="leading" secondItem="N4e-gh-4Lw" secondAttribute="leading" constant="20" id="sG3-m8-yBV"/>
-                            <constraint firstAttribute="trailing" secondItem="eOi-tq-vLl" secondAttribute="trailing" id="zfP-Tf-fVa"/>
-                        </constraints>
                     </view>
                     <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina47"/>
                     <connections>
